--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,9 @@
 <h1>口コミ一覧</h1>
-<%= @post.each do |post| %>
+<%= @posts.each do |post| %>
   <div>
+  <%= link_to post_path(post.id) do %>
+    <%= image_tag post.get_image %>
+  <% end %>
     <p>タイトル：<%= post.title %></p>
     <p>感想：<%= post.body %></p>
     <%= image_tag post.get_image %>
