--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,10 +4,11 @@
   <%= link_to post_path(post.id) do %>
     <%= image_tag post.get_image %>
   <% end %>
+  
+    <p>投稿ユーザー画像：<%= image_tag  post.user.get_profile_image(100,100) %></p>
     <p>タイトル：<%= post.title %></p>
     <p>感想：<%= post.body %></p>
     <%= image_tag post.get_image %>
-    <p>投稿ユーザー画像：<%= image_tag 'no_image.jpg' %></p>
     <p>ユーザーネーム：<%= post.user.name %></p>
   </div>
 <% end %>
