--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,7 @@
 
 <p>タイトル：<%= @post.title %></p>
 <p>感想：<%= @post.body %></p>
+<p>投稿ユーザー画像：<%= image_tag @post.user.get_profile_image(100,100) %></p>
 <p>ユーザーネーム：<%= @post.user.name %></p>
 <p>投稿日：<%= @post.created_at.strftime('%Y/%m/%d') %></p>
 <% if @post.user == current_user %>
