--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,25 @@
-<h1>TOPページに</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 mx-auto">
+      <h1>welcome to <i class="fa-solid fa-book"></i> <strong>Bookers </strong>!!</h1>
+      <p>In <i class="fa-solid fa-book"></i> <strong> Bookers</strong>,</p>
+
+      <p>you can share and exchange your opinions , inpressions , and emotions</p>
+
+      <p>about various books!</p>
+
+      <div class="col-10 mx-auto">
+        <div class="row">
+          <div class="btn btn-info btn-block mb-3">
+            <%= link_to 'Log in', new_user_session_path, class: "text-light"%>
+          </div>
+        </div>
+          <div class="row">
+            <div class="btn btn-success btn-block">
+              <%= link_to 'Sign up', new_user_registration_path, class: "text-light" %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
