--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -1,11 +1,8 @@
-<h1>口コミ一覧</h1>
-<div class="card-list-container py-5">
 <% @posts.each do |post| %>
   <div>
-  <%= link_to post_path(post.id) do %>
-    <%= image_tag post.get_image %>
-  <% end %>
-  
+    <%= link_to post_path(post.id) do %>
+      <%= image_tag post.get_image %>
+    <% end %>
     <p>投稿ユーザー画像：<%= image_tag  post.user.get_profile_image(100,100) %></p>
     <p>タイトル：<%= post.title %></p>
     <p>感想：<%= post.body %></p>
@@ -13,6 +10,5 @@
     <p>ユーザーネーム：<%= post.user.name %></p>
     <p><%= link_to "#{post.post_comments.count} コメント", post_path(post.id) %></p>
   </div>
-
-  
-<% end %>
+  <% end %>
+  <%= paginate post %>
