--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -13,7 +13,7 @@
   <h4>タイトル</h4>
   <%= f.text_field :title %>
   <h4>感想</h4>
-  <%= f.text_area :caption %>
+  <%= f.text_area :body %>
   <h4>写真</h4>
   <%= f.file_field :image, accept: "image/*" %>   
 
