--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,8 @@
 <h2>マイページ編集</h2>
 <%= form_with model: @user do |f| %>
   <label for="inputName">名前</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <label for="inputImage">ProfileImage</label>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>  
+  <p><%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%></p>
+  <p><label for="inputImage">ProfileImage</label><br>
+  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %></p>  
   <%= f.submit "変更する" %>
 <% end %>
