--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,17 +6,27 @@
   <% end %>
 </div>
 
+<div class="mt-3">
+  <%= link_to "マイページ編集", edit_user_path(@user) %>
+</div>
+
+<div class="mt-3">
+  <%= link_to "退会", user_path(current_user.id), class: "destroy-user", method: :delete, "data-confirm" => "本当に退会しますか？" %>
+</div>
+      </div>
+
 <!-- ユーザーの投稿一覧 -->
 
 <% @posts.each do |post| %>
-<div>
-  <%= link_to post_path(post.id) do %>
-    <%= image_tag post.get_image %>
-  <% end %>
-  <p>タイトル：<%= post.title %></p>
-  <p>感想：<%= post.body %></p>
-  <p>投稿ユーザー画像：<%= image_tag 'no_image.jpg' %></p>
-  <p>ユーザーネーム：<%= post.user.name %></p>
-  <p><%= link_to "#{post.post_comments.count} コメント", post_path(post.id) %></p>
-</div>
+  <div>
+    <%= link_to post_path(post.id) do %>
+      <%= image_tag post.get_image %>
+    <% end %>
+    <p>タイトル：<%= post.title %></p>
+    <p>感想：<%= post.body %></p>
+    <p>投稿ユーザー画像：<%= image_tag 'no_image.jpg' %></p>
+    <p>ユーザーネーム：<%= post.user.name %></p>
+    <p><%= link_to "#{post.post_comments.count} コメント", post_path(post.id) %></p>
+  </div>
+    
 <% end %>
