--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,43 @@
-<h2>Sign up</h2>
-
 <%= form_with model: @user, url: user_registration_path do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <body class="d-flex flex-column vh-2  100">
+    <main class="mb-auto">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-md-6 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5" >
+            <h5 class="text-dark bg-light py-4 mb-0">新規登録</h5>
+            <div class="form-body p-5">
 
-  <div class="field">
-  <%= f.label :name %><br>
-  <%= f.text_field :name %>
+              <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+              <div class="field">
+              <%= f.label :name %></br>
+              <%= f.text_field :name %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+              <div class="field">
+                <%= f.label :email %></br>
+                <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+              </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+              <div class="field">
+                <%= f.label :password %>
+                <% if @minimum_password_length %>
+                <em>(<%= @minimum_password_length %> characters minimum)</em></br>
+                <% end %>
+                <%= f.password_field :password, autocomplete: "new-password" %>
+              </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+              <div class="field">
+                <%= f.label :password_confirmation %></br>
+                <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+              </div>
+
+              <div class="actions style="margin-top: 20px;">
+                <%= f.submit "Sign up", class: "btn btn-info" %></br>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 <% end %>
-
-<%= render "devise/shared/links" %>
