--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,22 +1,29 @@
-<h1>口コミ投稿</h1>
+<div class="container">
+  <div class="row no-gutters">
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
+      <h5 class="text-dark bg-light p-4 mb-0">口コミ投稿</h5>
+      <div class="form-body p-4">
+        <% if @post.errors.any? %>
+          <ul class="alert alert-danger" role="alert">
+            <h6 class="alert-heading">
+              <%= @post.errors.count %>件のエラーが発生しました
+            </h6>
+            <% @post.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
 
-<% if @post.errors.any? %>
-  <%= @post.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @post.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_with model: @post do |f| %>
-  <h4>タイトル</h4>
-  <%= f.text_field :title %>
-  <h4>感想</h4>
-  <%= f.text_area :body %>
-  <h4>写真</h4>
-  <%= f.file_field :image, accept: "image/*" %>   
-
-  <%= f.submit '投稿' %>
-<% end %>
+        <%= form_with model: @post do |f| %>
+          <%= f.file_field :image, accept: "image/*", class: "w-100" %>
+           <div class=" mb-3 mt-4">
+            <%= f.text_field :title, class: "form-control", placeholder: "タイトル" %>
+          </div>
+          <%= f.text_area :body,class: "form-control", rows: "3", placeholder: "感想" %>
+          <%= f.submit '投稿', class: "btn btn-lg btn-block btn-info mt-4" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
 
