--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,36 @@
-<h2>マイページ編集</h2>
-<%= form_with model: @user do |f| %>
-  <label for="inputName">名前</label>
-  <p><%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%></p>
-  <p><label for="inputImage">ProfileImage</label><br>
-  <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %></p>  
-  <%= f.submit "変更する" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+    <h5 class="text-dark bg-light py-4 mb-0">マイページ編集</h5>
+      <%= form_with model: @user do |f| %>
+        <div class="error_explanation">
+          <% if @user.errors.any? %>
+            <h3><%= @user.errors.count %> error prohibited this obj from being saved:</h3>
+            <ul>
+              <% @user.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          <% end %>
+        </div>
+        
+      
+        <div class="form-body p-4">
+          <div class="mx-auto text-center"></div>
+            <div class="form-group">
+              <label for="user_name">名前</label>
+              <%= f.text_field :name, class: "form-control user_name" %>
+            </div>
+            <div class="form-group">
+              <label for="inputImage">プロフィール画像</lable>
+              <%= f.file_field :profile_image, accept: "image/*", class: "form-control-file user_image" %>
+            </div>
+            <div class="form-group">
+              <%= f.submit '変更する', class: "btn btn-secondary" %>
+            </div>
+            <% end %>
+          </div>
+        </div>
+    <div>
+  </div>
+</div>
