--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,32 +1,31 @@
-<div>
-  <h3><%= @user.name %></h3>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <% if @user == current_user.id %>
-  <p><%= link_to "マイページ編集", edit_user_path(@user) %></p>
-  <% end %>
-</div>
-
-<div class="mt-3">
-  <%= link_to "マイページ編集", edit_user_path(@user) %>
-</div>
-
-<div class="mt-3">
-  <%= link_to "退会", user_path(current_user.id), class: "destroy-user", method: :delete, "data-confirm" => "本当に退会しますか？" %>
-</div>
+<body class="d-flex flex-column vh-100">
+  <main class="mb-auto">
+    <div class="container">
+      <div class="row no-gutters">
+        <div class="col-md-6 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
+          <h5 class="text-dark bg-light py-4 mb-0">マイページ</h5>
+          <div class="form-body p-5">
+            <h4><%= @user.name %></h4>
+            <%= image_tag @user.get_profile_image(100,100) %>
+            <% if @user.id == current_user.id %>
+              <p><%= link_to "マイページ編集", edit_user_path(@user), class: "text-light" %></p>
+            <% end %>
+          </div>
+          <div class="btn btn-success col-6 mb-3">
+            <%= link_to "マイページ編集", edit_user_path(@user), class: "text-light" %>
+          </div>
+          <div class="btn btn-success col-6 mb-3">
+            <%= link_to "退会", user_path(current_user.id), class: "destroy-user text-light", method: :delete, "data-confirm" => "本当に退会しますか？" %>
+          </div>
+        </div>
       </div>
+    </div>
+  </main>
+</body>
 
-<!-- ユーザーの投稿一覧 -->
+<h1>投稿履歴</h1>
+      <div>
+      <%= render 'posts/list', posts: @posts %>
+    　</div>
 
-<% @posts.each do |post| %>
-  <div>
-    <%= link_to post_path(post.id) do %>
-      <%= image_tag post.get_image %>
-    <% end %>
-    <p>タイトル：<%= post.title %></p>
-    <p>感想：<%= post.body %></p>
-    <p>投稿ユーザー画像：<%= image_tag 'no_image.jpg' %></p>
-    <p>ユーザーネーム：<%= post.user.name %></p>
-    <p><%= link_to "#{post.post_comments.count} コメント", post_path(post.id) %></p>
-  </div>
-    
-<% end %>
+
