--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,8 +17,8 @@
     <%= post_comment.user.name %>
     <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
     <% if post_comment.user == current_user %>
-      <%= link_to "削除", post_post_comment_path(post_comment.post, post_comment), method: :delete %>
-    <% end %>
+    <%= link_to '投稿編集', edit_post_path(@post) %>
+    <%= link_to "投稿削除", post_post_comment_path(post_comment.post, post_comment), method: :delete %>
   <% end %>
    <% if @post.favorited_by?(current_user) %>
     <p>
@@ -35,7 +35,7 @@
   <% end %>
 </div>
 <div>
-  <%= form_with model: [@post, @post_comment] do |f| %>
+    <%= form_with model: [@post, @post_comment] do |f| %>
     <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
     <%= f.submit "送信する" %>
   <% end %>
