--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,8 @@
 <p>ユーザーネーム：<%= @post.user.name %></p>
 <p>投稿日：<%= @post.created_at.strftime('%Y/%m/%d') %></p>
 <% if @post.user == current_user %>
-  <%= link_to "削除", post_path(@post), method: :delete %>
+  <%= link_to '投稿編集', edit_post_path(@post) %>
+  <%= link_to "削除", post_path(@post), method: :delete, "data-confirm" => "本当に削除しますか？" %>
 <% end %>
 </div>
 
@@ -17,8 +18,9 @@
     <%= post_comment.user.name %>
     <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
     <% if post_comment.user == current_user %>
-    <%= link_to '投稿編集', edit_post_path(@post) %>
+    
     <%= link_to "投稿削除", post_post_comment_path(post_comment.post, post_comment), method: :delete %>
+    <% end %>
   <% end %>
    <% if @post.favorited_by?(current_user) %>
     <p>
